

	Quests

Quest changes which significantly affect specific quests requirements or rewards.
This does not include minor changes to quest related dialog or obvious fixes, such as closing quests that can no longer be completed, etc.

"A Brazen Thief"	Rengaru runs much further when confronted and if not caught will return to his regular spot.
"Bottoms up"	Contest is only won by Randolph if Rukhar does not notice someone has been to his chest.
"Cavalorn's old hut"	Only begins once NH finds the bag of ore, since before that the NH does not really have a task that he knows about.
"Finding Joe"	No longer has its own logged quest, since for all NH knows, he is just another missing person.
"Gold for Brutus"	Den can only be found after Brutus mentions him, he will have spent some of the gold for provisions and the XP reward is only received upon finding Den.
"Hunger"	Gerold is more satisfied with more valuable food.
"I gotta get out of here!"	Requires Talbin to be escorted through the pass and he doesn't spawn on Bengars farm right away.
"Merchant raid"	Requires finding the bandits who took Erol's stone tablets, before returning any stone tablets.
"Quest for Lucia"	Is now just about delivering her note to Elvrich, after that she is just another missing person.
"Razor hunt"	The razors that should be hunted are closer to the camp and the pirates won't go all the way to the orc camp.
"Rescue Gorn"	Can only be finished after scouting at least one mining site.
"The Claw of Beliar"	Requires talking to Saturas before praying to Beliar and the option to destroy it is only presented once.
"The Seekers"	Can be finished by bringing all of the Almanacs to Pyrokar before leaving for Irdorath.
"The man with the eyepatch"	Cancels if the first treasure is not given to him.
"The simple way to the monastery"	Only reduces the gold offering required.
"Unnerving Lurkers"	Cancels in chapter 4 if not finished, causing Kervo and Geppert to be killed by a lurker instead of disappearing.

